--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "name": "elkid-be",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
