--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node --inspect src/index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
